# hiztery

./: Cargo.toml  README.md  hiztery.db  hiztery.db-wal  hizzy.db-shm  hizzy.db-wal
src/: database.rs  history_item.rs  main.rs
