[package]
name = "hiztery"
version = "0.1.0"
authors = ["Darren Schroeder <343840+fdncred@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.8.0", features = [ "attributes" ] }
futures = "0.3"
paw = "1.0"
sqlx = { version = "0.5.5", features = ["sqlite"] }
structopt = { version = "0.3", features = ["paw"] }
sqlx-macros = "0.5.5"