[package]
name = "hiztery"
version = "0.1.0"
authors = ["Darren Schroeder <343840+fdncred@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.12.0", features = [ "attributes" ] }
futures = "0.3"
paw = "1.0"
async-trait = "0.1.64"
sqlx = { version = "0.6.2", features = ["sqlite", "chrono"] }
structopt = { version = "0.3", features = ["paw"] }
sqlx-macros = "0.6.2"
# chrono = { version = "0.4.19", features = ["serde"] }
chrono = "0.4.23"
log = "0.4.17"
# eyre = "0.6.5"
simplelog = "0.12.0"
itertools = "0.10.5"
lazy_static = "1.4.0"